# tad-bits

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: compile-options.cmake
include/: tb_AudioFeatures.h  tb_Core.h  tb_DspUtilities.h  tb_FifoBuffer.h  tb_Geometry.h  tb_Interpolation.h  tb_Math.h  tb_SampleRateConverter.h  tb_Space.h  tb_Windowing.h
tests/: test_AudioFeatures.cpp  test_SampleRateConverter.cpp
